<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>


        <import type="com.doctor.sun.util.CountDownUtil" />

        <variable
            name="data"
            type="com.doctor.sun.vm.ItemCaptchaInput" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:divider="@color/divider_color"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_70"
            android:layout_weight="1">

            <include
                layout="@layout/item_text_input5"
                bind:data="@{data}" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_captcha"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dp_13"
            android:layout_marginRight="@dimen/dp_13"
            android:background="@drawable/selector_count_down_rect"
            android:gravity="center"
            android:minWidth="@dimen/dp_65"
            android:onClick="@{data.listener}"
            android:paddingEnd="@dimen/dp_6"
            android:paddingLeft="@dimen/dp_6"
            android:paddingRight="@dimen/dp_6"
            android:paddingStart="@dimen/dp_6"
            android:selected="@{true}"
            android:text="@{data.subTitle}"
            android:textColor="@color/white"
            android:textSize="@dimen/font_15" />


    </LinearLayout>
</layout>