<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.doctor.sun.vm.ClickMenu" />

        <variable
            name="vh"
            type="com.doctor.sun.ui.adapter.ViewHolder.BaseViewHolder" />

        <variable
            name="adapter"
            type="com.doctor.sun.ui.adapter.core.SortedListAdapter" />

    </data>


    <LinearLayout
        android:id="@+id/lly_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_13"
        android:layout_marginRight="@dimen/dp_13"
        android:layout_marginTop="@dimen/dp_20"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_circle_tick"
            android:checked="@={data.enabled}"
            android:drawablePadding="@dimen/dp_4"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_4"
            android:textColor="@color/color_cb_text"
            android:textSize="@dimen/font_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawablePadding="@dimen/dp_4"
            android:gravity="center_vertical"
            android:onClick="@{data.itemClick()}"
            android:padding="@dimen/dp_4"
            android:selected="@{data.enabled}"
            android:text="@{data.title}"
            android:textColor="@color/color_cb_text"
            android:textSize="@dimen/font_12" />
    </LinearLayout>

</layout>